--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "classnames": "^2.2.6",
     "d3-geo": "^1.11.3",
     "draft-js": "^0.11.4",
+    "draft-js-anchor-plugin": "^2.0.3",
+    "draft-js-custom-styles": "^2.1.1",
+    "draft-js-emoji-plugin": "^2.1.3",
     "draft-js-import-html": "^1.4.1",
+    "draft-js-plugins-editor": "^3.0.0",
+    "draft-js-static-toolbar-plugin": "^3.0.1",
+    "draft-js-undo-plugin": "^2.0.3",
     "draftjs-to-html": "^0.9.1",
     "enzyme-adapter-react-16.1": "^1.6.2",
     "faker": "^4.1.0",
@@ -25,6 +31,8 @@
     "react-chartjs-2": "^2.7.4",
     "react-component-queries": "^2.3.0",
     "react-d3-map": "^0.8.3",
+    "react-device-detect": "^1.13.1",
+    "react-dock": "^0.2.4",
     "react-dom": "^16.8.4",
     "react-draft-wysiwyg": "^1.14.4",
     "react-floating-action-button": "^1.0.5",
