Avatar with Initials

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
+    "react-avatar": "^3.9.7",
     "react-chartjs-2": "^2.7.4",
     "react-component-queries": "^2.3.0",
     "react-d3-map": "^0.8.3",
