--- a/firebase.json
+++ b/firebase.json
@@ -11,12 +11,12 @@
     "redirects": [
       {
         "source": "/",
-        "destination": "https://reduction-admin.github.io/react-reduction/",
+        "destination": "https://cranberryware.com/",
         "type": 301
       },
       {
         "source": "/**",
-        "destination": "https://reduction-admin.github.io/react-reduction/",
+        "destination": "https://cranberryware.com/",
         "type": 301
       }
     ]
