--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
     "@types/js-cookie": "^2.2.6",
+    "@types/reactstrap": "^8.5.0",
     "axios": "^0.19.0",
     "bootstrap": "4.3.1",
     "chart.js": "2.7.2",
